Readability fix for about

--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ canvas{
 	padding: 2%;
 	width: 55vmax;
 	text-align: left;
-	background-color: rgba(240,240,240,0.5);
+	background-color: rgba(240,240,240,0.8);
 	border-radius: 1%;
 }
 
